Worked on US3, completed all fields, only role needs to config further. Issues listed on Trello.

--- a/src/main/resources/templates/user/user-create.html
+++ b/src/main/resources/templates/user/user-create.html
@@ -60,7 +60,7 @@
                     <div class="col-3 form-group">
                         <label>Phone Number
                             <input type="text" class="form-control" placeholder="Phone Number"
-                                   th:field="*{address.phoneNumber}">
+                                   th:field="*{phoneNumber}">
                         </label>
                         <div class="text-danger" th:if="${#fields.hasErrors('address.phoneNumber')}">
                             <ul>
